utm/9.718/standalone.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Sophos UTM 9",
  "Parameters": {
    "AMI": {
      "Description": "Autodetect uses the latest AMI based on the pricing option you select. Otherwise, specify an AMI ID.",
      "Type": "String",
      "Default": "autodetect"
    },
    "LicenseType": {
      "Description": "Select between Bring Your Own License (BYOL) or pay per instance-hour (Hourly). This parameter does not take effect if you manually enter an AMI ID.",
      "Type": "String",
      "AllowedValues": [
        "Hourly",
        "BYOL"
      ]
    },
    "VpcId": {
      "Type": "AWS::EC2::VPC::Id",
      "Description": "ID of an existing VPC to launch the deployment in."
    },
    "PrivateSubnetId": {
      "Description": "Subnet ID for private network interface.",
      "Type": "AWS::EC2::Subnet::Id"
    },
    "PublicSubnetId": {
      "Description": "Subnet ID for public network interface.",
      "Type": "AWS::EC2::Subnet::Id"
    },
    "PrivateNetworkCIDR": {
      "Description": "Allow all traffic from this CIDR on the private network interface.",
      "Type": "String",
      "Default": "0.0.0.0/0",
      "AllowedPattern": "^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?).){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)(/([0-9]|[1-2][0-9]|3[0-2]))$",
      "ConstraintDescription": "Must be IPv4 CIDR notation: X.X.X.X/X"
    },
    "PublicNetworkCIDR": {
      "Description": "Allow all TCP traffic (except port 22 and 4444) from this CIDR on the public network interface.",
      "Type": "String",
      "Default": "0.0.0.0/0",
      "AllowedPattern": "^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?).){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)(/([0-9]|[1-2][0-9]|3[0-2]))$",
      "ConstraintDescription": "Must be IPv4 CIDR notation: X.X.X.X/X"
    },
    "OptTrustedNetworkCIDR": {
      "Description": "Allow all traffic (including! TCP port 22 and 4444) from this CIDR on the public network interface.",
      "Type": "String",
      "Default": ""
    },
    "InstanceSize": {
      "Description": "The default EC2 instance type is m4.large. If m4.large is not available in your region, a similar EC2 instance type will be used.",
      "Type": "String",
      "Default": "default"
    },
    "KeyName": {
      "Type": "AWS::EC2::KeyPair::KeyName",
      "Description": "Name of an existing EC2 KeyPair to enable SSH access."
    },
    "OptExistingElasticIpId": {
      "Description": "Association ID of an existing Elastic IP. If no ID is specified a new Elastic IP is created.",
      "Type": "String"
    }
  },
  "Metadata": {
    "AWS::CloudFormation::Interface": {
      "ParameterGroups": [
        {
          "Label": {
            "default": "Instance Configuration"
          },
          "Parameters": [
            "AMI",
            "LicenseType",
            "InstanceSize"
          ]
        },
        {
          "Label": {
            "default": "Infrastructure Configuration"
          },
          "Parameters": [
            "VpcId",
            "PrivateSubnetId",
            "PublicSubnetId",
            "PrivateNetworkCIDR",
            "PublicNetworkCIDR",
            "OptExistingElasticIpId"
          ]
        },
        {
          "Label": {
            "default": "Access Permissions"
          },
          "Parameters": [
            "KeyName",
            "OptTrustedNetworkCIDR"
          ]
        }
      ],
      "ParameterLabels": {
        "AMI": {
          "default": "AMI ID (required)"
        },
        "LicenseType": {
          "default": "Pricing Option (required)"
        },
        "InstanceSize": {
          "default": "Instance Type (required)"
        },
        "VpcId": {
          "default": "VPC ID (required)"
        },
        "PrivateSubnetId": {
          "default": "Private Subnet ID (required)"
        },
        "PublicSubnetId": {
          "default": "Public Subnet ID (required)"
        },
        "PrivateNetworkCIDR": {
          "default": "Private Network CIDR (required)"
        },
        "PublicNetworkCIDR": {
          "default": "Public Network CIDR (required)"
        },
        "OptExistingElasticIpId": {
          "default": "Existing Elastic IP ID (optional)"
        },
        "KeyName": {
          "default": "SSH Key (required)"
        },
        "OptTrustedNetworkCIDR": {
          "default": "Trusted Network CIDR (optional)"
        }
      }
    }
  },
  "Mappings": {
    "RegionMap": {
      "af-south-1": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-east-1": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-northeast-1": {
        "Hourly": "ami-017584adfc825d470",
        "BYOL": "ami-029247538cd4e9543",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-northeast-2": {
        "Hourly": "ami-0fd88f81ed89e00e6",
        "BYOL": "ami-083c735ad6f3ee6a7",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-northeast-3": {
        "Hourly": "ami-0e6a5a27a7a00f401",
        "BYOL": "ami-01a5110329c0f7531",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-south-1": {
        "Hourly": "ami-057e9a13a94b75a28",
        "BYOL": "ami-0e63199c5f6d2748b",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-south-2": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-southeast-1": {
        "Hourly": "ami-08ec0939c6b6f5757",
        "BYOL": "ami-08be0b714916c57b9",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-southeast-2": {
        "Hourly": "ami-05e9240d8f75ef4bf",
        "BYOL": "ami-07896edad1817eefe",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-southeast-3": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-southeast-4": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ca-central-1": {
        "Hourly": "ami-07bd7a38098aa4b2b",
        "BYOL": "ami-06f47a94f07bc1147",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "eu-central-1": {
        "Hourly": "ami-06b803fda08143586",
        "BYOL": "ami-03eda7712b1c8299a",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "eu-central-2": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "eu-north-1": {
        "Hourly": "ami-07f17d4d7bc176d03",
        "BYOL": "ami-0447418b0614552b7",
        "ARN": "aws",
        "HAInstanceType": "m5.large"
      },
      "eu-south-1": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "eu-south-2": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "eu-west-1": {
        "Hourly": "ami-087e721733854ae27",
        "BYOL": "ami-02b9461d20f104774",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "eu-west-2": {
        "Hourly": "ami-0298eeff2fa44aef0",
        "BYOL": "ami-0f40e1b177eb89a9d",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "eu-west-3": {
        "Hourly": "ami-0cd6218eda332fa1a",
        "BYOL": "ami-0556ac304b6aafa47",
        "ARN": "aws",
        "HAInstanceType": "m5.large"
      },
      "il-central-1": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "me-central-1": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "me-south-1": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "sa-east-1": {
        "Hourly": "ami-07ddaa39060bb8f7b",
        "BYOL": "ami-09657249496675dd5",
        "ARN": "aws",
        "HAInstanceType": "m3.medium"
      },
      "us-east-1": {
        "Hourly": "ami-061101af583942b1d",
        "BYOL": "ami-00a823abef4871014",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "us-east-2": {
        "Hourly": "ami-095fe5e080f6cf5cb",
        "BYOL": "ami-0e583d7aeee11d820",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "us-gov-east-1": {
        "Hourly": "ami-015e7f73bc1271488",
        "BYOL": "ami-085e6b63e32db48da",
        "ARN": "aws-us-gov",
        "HAInstanceType": "m5.large"
      },
      "us-gov-west-1": {
        "Hourly": "ami-0e985e78e0c58a555",
        "BYOL": "ami-0ec01e5b37fdd6f84",
        "ARN": "aws-us-gov",
        "HAInstanceType": "m4.large"
      },
      "us-west-1": {
        "Hourly": "ami-0a6d04523f8a5c0e1",
        "BYOL": "ami-0036c0a8d3552e5ce",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "us-west-2": {
        "Hourly": "ami-0b420077aa787ad24",
        "BYOL": "ami-0274387a7628e6b82",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      }
    }
  },
  "Conditions": {
    "DetectAMI": {
      "Fn::Equals": [
        {
          "Ref": "AMI"
        },
        "autodetect"
      ]
    },
    "DetectInstanceSize": {
      "Fn::Equals": [
        {
          "Ref": "InstanceSize"
        },
        "default"
      ]
    },
    "TrustedPublicNetwork": {
      "Fn::Not": [
        {
          "Fn::Equals": [
            {
              "Ref": "OptTrustedNetworkCIDR"
            },
            ""
          ]
        }
      ]
    },
    "AllocateElasticIP": {
      "Fn::Equals": [
        {
          "Ref": "OptExistingElasticIpId"
        },
        ""
      ]
    }
  },
  "Resources": {
    "SecurityGroupPrivate": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security Group",
        "VpcId": {
          "Ref": "VpcId"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "-1",
            "CidrIp": {
              "Ref": "PrivateNetworkCIDR"
            }
          }
        ],
        "SecurityGroupEgress": [
          {
            "Description": "Allow all outbound traffic",
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "SecurityGroupPublic": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security Group",
        "VpcId": {
          "Ref": "VpcId"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "CidrIp": {
              "Ref": "PublicNetworkCIDR"
            },
            "FromPort": "0",
            "ToPort": "21"
          },
          {
            "IpProtocol": "tcp",
            "CidrIp": {
              "Ref": "PublicNetworkCIDR"
            },
            "FromPort": "23",
            "ToPort": "4443"
          },
          {
            "IpProtocol": "tcp",
            "CidrIp": {
              "Ref": "PublicNetworkCIDR"
            },
            "FromPort": "4445",
            "ToPort": "5431"
          },
          {
            "IpProtocol": "tcp",
            "CidrIp": {
              "Ref": "PublicNetworkCIDR"
            },
            "FromPort": "5433",
            "ToPort": "65535"
          },
          {
            "IpProtocol": "udp",
            "FromPort": "3410",
            "ToPort": "3410",
            "CidrIp": {
              "Ref": "PublicNetworkCIDR"
            }
          }
        ],
        "SecurityGroupEgress": [
          {
            "Description": "Allow all outbound traffic",
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "SecurityGroupTrusted": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security Group",
        "VpcId": {
          "Ref": "VpcId"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "-1",
            "CidrIp": {
              "Ref": "OptTrustedNetworkCIDR"
            }
          }
        ],
        "SecurityGroupEgress": [
          {
            "Description": "Allow all outbound traffic",
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      },
      "Condition": "TrustedPublicNetwork"
    },
    "PublicENI": {
      "Type": "AWS::EC2::NetworkInterface",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnetId"
        },
        "Description": "ENI for Public Subnet",
        "GroupSet": [
          {
            "Fn::If": [
              "TrustedPublicNetwork",
              {
                "Ref": "SecurityGroupTrusted"
              },
              {
                "Ref": "SecurityGroupPublic"
              }
            ]
          },
          {
            "Ref": "SecurityGroupPublic"
          }
        ],
        "SourceDestCheck": "false"
      }
    },
    "PrivateENI": {
      "Type": "AWS::EC2::NetworkInterface",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateSubnetId"
        },
        "Description": "ENI for Private Subnet",
        "GroupSet": [
          {
            "Ref": "SecurityGroupPrivate"
          }
        ],
        "SourceDestCheck": "false"
      }
    },
    "Instance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Private"
          }
        ],
        "InstanceType": {
          "Fn::If": [
            "DetectInstanceSize",
            {
              "Fn::FindInMap": [
                "RegionMap",
                {
                  "Ref": "AWS::Region"
                },
                "HAInstanceType"
              ]
            },
            {
              "Ref": "InstanceSize"
            }
          ]
        },
        "KeyName": {
          "Ref": "KeyName"
        },
        "NetworkInterfaces": [
          {
            "NetworkInterfaceId": {
              "Ref": "PublicENI"
            },
            "DeviceIndex": "0"
          },
          {
            "NetworkInterfaceId": {
              "Ref": "PrivateENI"
            },
            "DeviceIndex": "1"
          }
        ],
        "ImageId": {
          "Fn::If": [
            "DetectAMI",
            {
              "Fn::FindInMap": [
                "RegionMap",
                {
                  "Ref": "AWS::Region"
                },
                {
                  "Ref": "LicenseType"
                }
              ]
            },
            {
              "Ref": "AMI"
            }
          ]
        }
      }
    },
    "NewEIP": {
      "Type": "AWS::EC2::EIP",
      "Condition": "AllocateElasticIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "EIPAssociation": {
      "Type": "AWS::EC2::EIPAssociation",
      "Properties": {
        "NetworkInterfaceId": {
          "Ref": "PublicENI"
        },
        "AllocationId": {
          "Fn::If": [
            "AllocateElasticIP",
            {
              "Fn::GetAtt": [
                "NewEIP",
                "AllocationId"
              ]
            },
            {
              "Ref": "OptExistingElasticIpId"
            }
          ]
        }
      }
    }
  },
  "Outputs": {
    "URL": {
      "Description": "URL to the Gateway portal",
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Fn::GetAtt": [
                "Instance",
                "PublicIp"
              ]
            },
            ":4444"
          ]
        ]
      }
    }
  }
}
